# NORNS

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  LICENSE  LICENSE_HEADER  META  Makefile.am  README.md  apply-headers.sh  bootstrap.sh  configure.ac  gencov.sh
.github/: README.md
config/: Make-inc.mk
doc/: Makefile.am  norns.conf.5.in  urd.8.in
etc/: Makefile.am  norns.conf.in  norns.service.in  norns_example.conf
examples/: Makefile.am  app.c  job_registration.c  task_submission.c
include/: Makefile  Makefile.am  libnorn.h  norns.h  nornsctl.h
include/norns/: norns.h  norns_backends.h  norns_debug.h  norns_error.h  norns_resources.h  norns_types.h  nornsctl.h  nornsctl_types.h
lib/: Makefile.am  communication.c  communication.h  config-parser.c  config-parser.h  context-common.c  context-common.h  daemon-communication.c  daemon-communication.h  defaults.h  errors.c  libnorns-context.c  libnorns-context.h  libnorns.c  libnornsctl-context.c  libnornsctl-context.h  libnornsctl.c  log.c  log.h  norn.c  norns.c  nornsctl.c  requests.c  requests.h  resources.c  xmalloc.c  xmalloc.h  xstring.c  xstring.h
m4/: ax_boost_asio.m4  ax_boost_filesystem.m4  ax_boost_program_options.m4  ax_boost_regex.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_gcc_working_std_regex.m4  norns.m4
rpc/: Makefile.am  messages.proto  norns-rpc.h
scripts/: NORNS.erb  (+3 more)
src/: Makefile.am  api.hpp  app.c  auth.hpp  backend-base.hpp  backends.cpp  backends.hpp  common.hpp  config.hpp  context.hpp  defaults.hpp  dloom.cpp  dloomOld.c  fmt.hpp  io-task-stats.cpp  io-task-stats.hpp  io-task.cpp  io-task.hpp  io.hpp  ipc-listener.hpp  job.hpp  logger.hpp  main.cpp  make-unique.hpp  message.hpp  namespaces.hpp  norn.c  nvml-dax.cpp  nvml-dax.hpp  posix-fs.cpp  posix-fs.hpp  request-base.cpp  request-base.hpp  requests.cpp  requests.hpp  resources.hpp  response-base.hpp  responses.cpp  responses.hpp  rpcs.cpp  (+11 more)
src/api/: dispatch-table.hpp  listener.hpp  local-endpoint.hpp  message.hpp  remote-endpoint.hpp  request.cpp  request.hpp  response.cpp  response.hpp  session.hpp  signal-listener.hpp
src/auth/: process-credentials.cpp  process-credentials.hpp
src/backends/: backend-base.cpp  backend-base.hpp  lustre-fs.cpp  lustre-fs.hpp  nvml-dax.cpp  nvml-dax.hpp  posix-fs.cpp  posix-fs.hpp  process-memory.cpp  process-memory.hpp  remote-backend.cpp  remote-backend.hpp
src/common/: dispatch-table.hpp  make-unique.hpp  types.cpp  types.hpp  unique-ptr-cast.hpp
src/config/: config-schema.hpp  defaults.hpp  file-options.hpp  keywords.hpp  parsers.cpp  parsers.hpp  settings.cpp  settings.hpp
src/config/file_options/: file-schema.hpp  options-map.hpp  yaml-parser.hpp
src/io/: fake-task.cpp  fake-task.hpp  task-copy.hpp  task-info.cpp  task-info.hpp  task-manager.cpp  task-manager.hpp  task-move.hpp  task-noop.hpp  task-remote-transfer.hpp  task-remove.hpp  task-stats.cpp  task-stats.hpp  task-unknown.hpp  task.cpp  task.hpp  thread-pool.hpp  transferor-registry.cpp  transferor-registry.hpp  transferors.hpp
src/io/thread-pool/: thread-pool-queue.hpp  thread-pool.hpp
src/io/transferors/: local-path-to-local-path.cpp  local-path-to-local-path.hpp  local-path-to-remote-path.cpp  local-path-to-remote-path.hpp  local-path-to-remote-resource.cpp  local-path-to-remote-resource.hpp  local-path-to-shared-path.cpp  local-path-to-shared-path.hpp  memory-to-local-path.cpp  memory-to-local-path.hpp  memory-to-remote-path.cpp  memory-to-remote-path.hpp  memory-to-remote-resource.cpp  memory-to-remote-resource.hpp  memory-to-shared-path.cpp  memory-to-shared-path.hpp  remote-resource-to-local-path.cpp  remote-resource-to-local-path.hpp  tar-archive.cpp  tar-archive.hpp  transferor.hpp
src/namespaces/: namespace-manager.hpp
src/resources/: local-path.cpp  local-path.hpp  make-resource.hpp  make-stream.hpp  memory-buffer.cpp  memory-buffer.hpp  remote-path.cpp  remote-path.hpp  resource-info.hpp  resource-type.hpp  resource.hpp  shared-path.cpp  shared-path.hpp
src/resources/local_posix_path/: local-path.hpp
src/resources/local_posix_path/detail/: local-path-impl.cpp  local-path-impl.hpp  local-path-info.cpp  local-path-info.hpp
src/resources/memory_buffer/: memory-buffer.hpp
src/resources/memory_buffer/detail/: memory-region-impl.cpp  memory-region-impl.hpp  memory-region-info.cpp  memory-region-info.hpp
src/resources/remote_posix_path/: remote-path.hpp
src/resources/remote_posix_path/detail/: remote-path-impl.cpp  remote-path-impl.hpp  remote-path-info.cpp  remote-path-info.hpp
src/resources/remote_resource/: remote-resource.hpp
src/resources/remote_resource/detail/: remote-resource-impl.cpp  remote-resource-impl.hpp  remote-resource-info.cpp  remote-resource-info.hpp
src/resources/shared_posix_path/: shared-path.hpp
src/resources/shared_posix_path/detail/: shared-path-impl.cpp  shared-path-impl.hpp  shared-path-info.cpp  shared-path-info.hpp
src/spdlog/details/: pattern_formatter_impl.h
src/thread-pool/: thread-pool-queue.hpp  thread-pool.hpp
src/utils/: file-handle.hpp  tar-archive.cpp  tar-archive.hpp  temporary-file.cpp  temporary-file.hpp
tests/: Makefile.am  api-backend-register.cpp  api-backend-unregister.cpp  api-copy-local-data.cpp  api-copy-remote-data.cpp  api-ctl-copy-local-data.cpp  api-ctl-copy-remote-data.cpp  api-ctl-remove-local-data.cpp  api-ctl-task-init.cpp  api-ctl-task-status.cpp  api-ctl-task-submit.cpp  api-job-register.cpp  api-job-unregister.cpp  api-job-update.cpp  api-main.cpp  api-namespace-register.cpp  api-namespace-unregister.cpp  api-ping.cpp  api-process-add.cpp  api-process-remove.cpp  api-remove-local-data.cpp  api-resource-init.cpp  api-send-command.cpp  api-task-init.cpp  api-task-status.cpp  api-task-submit.cpp  api-transfer.cpp  compare-files.cpp  compare-files.hpp  config-template.hpp  fake-daemon.cpp  fake-daemon.hpp  test-env.cpp  test-env.hpp  utils-path-normalize.cpp  utils-tar.cpp
tests/mpi/: Makefile.am  commands.hpp  mpi-helpers.cpp  mpi-helpers.hpp  mpi-remote-transfers.cpp  mpi-server.cpp  mpi-tests-main.cpp
