# Copyright (C) 2017 Barcelona Supercomputing Center
#                    Centro Nacional de Supercomputacion
#
# This file is part of the Data Scheduler, a daemon for tracking and managing
# requests for asynchronous data transfer in a hierarchical storage environment.
#
# See AUTHORS file in the top level directory for information
# regarding developers and contributors.
#
# The Data Scheduler is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Data Scheduler is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Data Scheduler.  If not, see <http://www.gnu.org/licenses/>.
#

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = etc lib examples

DIST_SUBDIRS = lib examples

bin_PROGRAMS = src/urd

CLEANFILES = $(builddir)/src/defaults.cpp

src_urd_SOURCES = 			\
	src/ipc-listener.hpp	\
	src/backends.cpp        \
	src/backends.hpp        \
	src/defaults.hpp		\
	src/nvml-dax.cpp        \
	src/nvml-dax.hpp        \
	src/main.cpp			\
	src/posix-fs.cpp		\
	src/posix-fs.hpp		\
	src/settings.cpp		\
	src/settings.hpp		\
	src/urd.cpp				\
	src/urd.hpp				\
	src/utils.cpp			\
	src/utils.hpp

nodist_src_urd_SOURCES = \
	src/defaults.cpp

BUILT_SOURCES = 	\
	src/defaults.hpp

src_urd_CXXFLAGS = 				\
	@TBB_CFLAGS@ 				\
	-std=gnu++11 -Wall -Wextra

src_urd_CPPFLAGS = 				\
	-DSPDLOG_ENABLE_SYSLOG		\
	@BOOST_CPPFLAGS@			\
	-I$(top_srcdir)/include		\
	-I$(top_srcdir)/src


src_urd_LDFLAGS = 				\
	@TBB_LIBS@	  				\
	@BOOST_LDFLAGS@				\
    @BOOST_SYSTEM_LIB@			\
    @BOOST_ASIO_LIB@			\
    @BOOST_PROGRAM_OPTIONS_LIB@	\
	-pthread

src_urd_LDADD = 	\
	-lboost_system

$(builddir)/src/defaults.cpp: Makefile
	@( echo "/* This file autogenerated by Makefile */"; \
	   echo "#include \"defaults.hpp\""; \
	   echo ""; \
	   echo "namespace defaults {"; \
	   echo "    const char* progname           = \"urd\";"; \
	   echo "    const bool  daemonize          = true;"; \
	   echo "    const char* running_dir        = \"/tmp\";"; \
	   echo "    const char* ipc_sockfile       = \"/tmp/urd.socket\";"; \
	   echo "    const char* daemon_pidfile     = \"/tmp/urd.pid\";"; \
	   echo "    const uint32_t workers_in_pool = std::thread::hardware_concurrency();"; \
	   echo "    const char* config_file        = \"$(sysconfdir)/norns.conf\";"; \
	   echo "} // namespace defaults"; \
	 ) > $@
