##########################################################################
#  Copyright (C) 2017-2018 Barcelona Supercomputing Center               #
#                          Centro Nacional de Supercomputacion           #
#  All rights reserved.                                                  #
#                                                                        #
#  This file is part of the NORNS Data Scheduler, a service that allows  #
#  other programs to start, track and manage asynchronous transfers of   #
#  data resources transfers requests between different storage backends. #
#                                                                        #
#  See AUTHORS file in the top level directory for information           #
#  regarding developers and contributors.                                #
#                                                                        #
#  The NORNS Data Scheduler is free software: you can redistribute it    #
#  and/or modify it under the terms of the GNU Lesser General Public     #
#  License as published by the Free Software Foundation, either          #
#  version 3 of the License, or (at your option) any later version.      #
#                                                                        #
#  The NORNS Data Scheduler is distributed in the hope that it will be   #
#  useful, but WITHOUT ANY WARRANTY; without even the implied warranty   #
#  of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  #
#  Lesser General Public License for more details.                       #
#                                                                        #
#  You should have received a copy of the GNU Lesser General             #
#  Public License along with the NORNS Data Scheduler.  If not, see      #
#  <http://www.gnu.org/licenses/>.                                       #
##########################################################################

#dist_noinst_DATA = messages.proto
#
#EXTRA_DIST = messages.proto

lib_LTLIBRARIES = \
	libnorns.la \
	libnorns_debug.la \
	libnornsctl.la \
	libnornsctl_debug.la

include_HEADERS = \
	$(top_srcdir)/include/norns.h
	$(top_srcdir)/include/nornsctl.h
	$(top_srcdir)/include/norns/norns_error.h
	$(top_srcdir)/include/norns/norns_resources.h

AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/rpc


################################################################################
# libnorns_common.la and libnorns_common_debug.la: 
#   convenience libraries for libnorns and libnornsctl
################################################################################
noinst_LTLIBRARIES = \
	libnorns_common.la \
	libnorns_common_debug.la

libnorns_common_la_SOURCES = \
	daemon-communication.c \
	daemon-communication.h \
	defaults.h \
	errors.c \
	requests.c \
	requests.h \
	resources.c \
	xmalloc.c \
	xmalloc.h \
	xstring.c \
	xstring.h \
	$(top_srcdir)/include/norns.h \
	$(top_srcdir)/rpc/norns-rpc.h

nodist_libnorns_common_la_SOURCES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

libnorns_common_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnorns_common_la_LIBADD = \
	@PROTOBUF_C_LIBS@


## debug version ##
libnorns_common_debug_la_SOURCES = \
	$(libnorns_common_la_SOURCES)

nodist_libnorns_common_debug_la_SOURCES = \
	$(nodist_libnorns_common_la_SOURCES)

libnorns_common_debug_la_CFLAGS = \
	$(libnorns_common_la_CFLAGS)

libnorns_common_debug_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-D__NORNS_DEBUG__ \
	-Wp,-U_FORTIFY_SOURCE

libnorns_common_debug_la_LIBADD = \
	$(libnorns_common_la_LIBADD)


## misc dependencies ##
MOSTLYCLEANFILES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

BUILT_SOURCES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

defaults.c: Makefile
	@( echo "/* This file was autogenerated by Makefile */"; \
	   echo "#include \"defaults.h\""; \
	   echo ""; \
	   echo "const char* norns_api_global_socket = \"$(localstatedir)/urd/global.socket.2\";"; \
	   echo "const char* norns_api_control_socket = \"$(localstatedir)/urd/control.socket.2\";"; \
	) > $@

%.pb-c.c %.pb-c.h: $(top_srcdir)/rpc/%.proto
	$(PROTOC_C) --proto_path=$(top_srcdir)/rpc --c_out=$(builddir) $^


################################################################################
# libnorns.so and libnorns_debug.so: 
#   user library
################################################################################
libnorns_la_SOURCES = \
	norns.c

libnorns_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnorns_la_LDFLAGS = \
	-version-info 0:1:0

libnorns_la_LIBADD = \
	libnorns_common.la


## debug version ##
libnorns_debug_la_SOURCES = \
	$(libnorns_la_SOURCES)

libnorns_debug_la_CFLAGS = \
	$(libnorns_la_CFLAGS)

libnorns_debug_la_LDFLAGS = \
	$(libnorns_la_LDFLAGS)
	
libnorns_debug_la_LIBADD = \
	libnorns_common_debug.la


################################################################################
# libnornsctl.so: control library
################################################################################
libnornsctl_la_SOURCES = \
	nornsctl.c

libnornsctl_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnornsctl_la_LDFLAGS = \
	-version-info 0:1:0

libnornsctl_la_LIBADD = \
	libnorns_common.la


## debug version ##
libnornsctl_debug_la_SOURCES = \
	$(libnornsctl_la_SOURCES)

libnornsctl_debug_la_CFLAGS = \
	$(libnornsctl_la_CFLAGS)

libnornsctl_debug_la_LDFLAGS = \
	$(libnornsctl_la_LDFLAGS)

libnornsctl_debug_la_LIBADD = \
	libnorns_common_debug.la
